# living-ai

./: .gitignore  DATABRICKS_IMPLEMENTATION_PLAN.md  DATABRICKS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  INSTALL_GUIDE.md  README.md  USER_GUIDE.md  human-capabilities-beyond.md  living-ai-architecture.mmd  living-ai.md  mermaid-config.json  openclaw-properties.md
agent/: README.md  databricks.yml
agent/deploy/: build.sh  pyproject.toml
agent/deploy/living_ai_deploy/: __init__.py  __main__.py  deployer.py  prompts.py
agent/resources/: app.yml  database.yml  schema.yml  setup_job.yml  volumes.yml
agent/sql/: ddl.sql  setup_notebook.py
agent/src/: app.py  app.yaml  cognition.py  config.py  heartbeat.py  lakebase.py  memory.py  requirements.txt  telegram.py
